# fractal_images

./: CMakeLists.txt  README.md  main.cpp
include/: Bitmap.hpp  BitmapFileHeader.hpp  BitmapInfoHeader.hpp  Mandelbrot.hpp
src/: Bitmap.cpp  Mandelbrot.cpp
